force-app/main/default/objects/Lead_Distribution__c/Lead_Distribution__c.object-meta.xml
<CustomObject>
    <label>Lead Distribution</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Lead Distribution ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Distributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>