force-app/main/default/objects/Lead_Distribution__c/fields/ActiveLead__c.field-meta.xml
<CustomField>
    <fullName>ActiveLead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box will be check by the Trigger to tell Bright Pattern which record to dial next for this industry branch group.</description>
    <label>Active Lead</label>
    <type>Checkbox</type>
</CustomField>