force-app/main/default/objects/Lead_Distribution__c/fields/Call_Queue_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Queue_Status__c</fullName>
    <label>Call Queue Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Next</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>