force-app/main/default/objects/Lead_Distribution__c/fields/CPL_Id__c.field-meta.xml
<CustomField>
    <fullName>CPL_Id__c</fullName>
    <description>It contains CPL Join id captured from Round Robin trigger.</description>
    <label>CPL Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>