force-app/main/default/objects/Lead_Distribution__c/fields/CPL_Join__c.field-meta.xml
<CustomField>
    <fullName>CPL_Join__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPL Joins</label>
    <referenceTo>CPL_Joins__c</referenceTo>
    <relationshipLabel>Lead Distributions</relationshipLabel>
    <relationshipName>Lead_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>