force-app/main/default/objects/Lead_Distribution__c/fields/DID__c.field-meta.xml
<CustomField>
    <fullName>DID__c</fullName>
    <formula>Opportunity__r.DID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DID</label>
    <type>Text</type>
</CustomField>