force-app/main/default/objects/Lead_Distribution__c/fields/Distribution_Number__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Number__c</fullName>
    <description>This should be 1, 2, 3 , etc so we know which record to call next out of each industry branch group.</description>
    <label>Distribution Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>