force-app/main/default/objects/Lead_Distribution__c/fields/fBilling_Opportunity_Destination__c.field-meta.xml
<CustomField>
    <fullName>fBilling_Opportunity_Destination__c</fullName>
    <formula>Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fBilling Opportunity Destination</label>
    <type>Text</type>
</CustomField>