force-app/main/default/objects/Lead_Distribution__c/fields/fBilling_Opportunity_Lookup__c.field-meta.xml
<CustomField>
    <fullName>fBilling_Opportunity_Lookup__c</fullName>
    <formula>CPL_Join__r.Billing_Opportunity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fBilling Opportunity Lookup</label>
    <type>Text</type>
</CustomField>