force-app/main/default/objects/Lead_Distribution__c/fields/fOpportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>fOpportunity_Name__c</fullName>
    <formula>Opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fOpportunity Name</label>
    <type>Text</type>
</CustomField>