force-app/main/default/objects/Lead_Distribution__c/fields/LastDialedNumber__c.field-meta.xml
<CustomField>
    <fullName>LastDialedNumber__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box will be check by Bright Pattern as a call comes in or by a trigger when we see an inventory record show up with this as the dialed number on a forward to business call.</description>
    <label>Last Dialed Number</label>
    <type>Checkbox</type>
</CustomField>