force-app/main/default/objects/Lead_Distribution__c/fields/Lead_Destination_Number__c.field-meta.xml
<CustomField>
    <fullName>Lead_Destination_Number__c</fullName>
    <formula>CPL_Join__r.Destination_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Destination Number</label>
    <type>Text</type>
</CustomField>