force-app/main/default/objects/Lead_Distribution__c/fields/Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Name__c</fullName>
    <formula>CPL_Join__r.Billing_Opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Name</label>
    <type>Text</type>
</CustomField>