force-app/main/default/objects/Lead_Distribution__c/fields/VF_Account__c.field-meta.xml
<CustomField>
    <fullName>VF_Account__c</fullName>
    <label>VF Account</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>