force-app/main/default/objects/Lead_Distribution__c/fields/VF_CPL_Location__c.field-meta.xml
<CustomField>
    <fullName>VF_CPL_Location__c</fullName>
    <label>VF CPL Location</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>