force-app/main/default/objects/Lead_Distribution__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Producing_Opportunity_Industry__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Branch__c</columns>
    <columns>DID__c</columns>
    <columns>ActiveLead__c</columns>
    <columns>Call_Queue_Status__c</columns>
    <columns>Distribution_Number__c</columns>
    <columns>LastDialedNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>